crates/kdl-config-derive/tests/ui/invalid_default_placement.stderr
error: invalid default_placement, expected one of: exhaustive, attr, value, child
 --> tests/ui/invalid_default_placement.rs:4:27
  |
4 | #[kdl(default_placement = "nope")]
  |                           ^^^^^^
